--- a/index.html
+++ b/index.html
@@ -389,7 +389,7 @@
           <div class="row">
             <div class="col-md-9 mx-auto">
               <div class="contact-form">
-                <form action="">
+                <form action="mailto: skilledsapper@hotmail.ca" method="post" enctype="text/plain" class="contact-form me-lg-5 pe-lg-3" role="form">
                   <div>
                     <P>289-500-5163</P>
       <P>skilledsapper@hotmail.ca</P>
