--- a/index.html
+++ b/index.html
@@ -434,7 +434,7 @@
             </h5>
             <div>
               <div class="img-box">
-                <img src="images/location-white.png" width="18px" alt="">
+                <img src="location-white.png" width="18px" alt="">
               </div>
               <p>
                 REABORO, ON 
@@ -443,7 +443,7 @@
             </div>
             <div>
               <div class="img-box">
-                <img src="images/telephone-white.png" width="12px" alt="">
+                <img src="telephone-white.png" width="12px" alt="">
               </div>
               <p>
                 289-500-5163
@@ -451,7 +451,7 @@
             </div>
             <div>
               <div class="img-box">
-                <img src="images/envelope-white.png" width="18px" alt="">
+                <img src="envelope-white.png" width="18px" alt="">
               </div>
               <p>
                 skilledsapper@hotmail.ca
@@ -468,8 +468,8 @@
             </h5>
          
             <div class="social_box">
-              <a href="">
-                <img src="images/fb.png" alt="">
+              <a href="https://www.facebook.com/share/153AcaiqHD/?mibextid=wwXIfr">
+                <img src="fb.png" alt="">
               </a>
             
             </div>
