--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   <!-- slider stylesheet -->
   <!-- slider stylesheet -->
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" />
+  <link rel="stylesheet" type="text/css" href="rr.js" />
 
   <!-- bootstrap core css -->
   <link rel="stylesheet" type="text/css" href="bootstrap.css" />
@@ -288,7 +289,7 @@
           SHOWCASE
         </h2>
       </div>
-      <div class="carousel-wrap ">
+      <div class="carousel-wrap">
         <div class="owl-carousel">
           <div class="item">
             <div class="box">
