--- a/index.html
+++ b/index.html
@@ -496,9 +496,9 @@
 
   <script type="text/javascript" src="jquery-3.4.1.min.js"></script>
   <script type="text/javascript" src="bootstrap.js"></script>
-  <script type="text/javascript" src="cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js">
-  <script type="text/javascript" src="rr.js">
-  </script>
+  <script type="text/javascript" src="cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
+  <script type="text/javascript" src="rr.js"></script>
+  
   <!-- owl carousel script 
     -->
   <script type="text/javascript">
