--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   <!-- slider stylesheet -->
   <!-- slider stylesheet -->
   <link rel="stylesheet" type="text/css" href="cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" />
+  <link rel="stylesheet" type="text/css" href="rr.css" />
   <link rel="stylesheet" type="text/css" href="rr.js" />
 
   <!-- bootstrap core css -->
