--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
           WHO WE ARE
         </h2>
         <p>
-          At Reliable Repairs, we believe that every nail, screw, and beam contributes to creating your ideal space. We’re a company that provides customers with an expert handyman service in and around Reaboro, ON and Kawartha Lakes. We understand that every home has unique needs. Our commitment to excellence shapes everything we do. We always seek to provide our customers with hassle-free services that improve and elevate any interior or exterior part of your property. We aim to be communicative and professional so that you will always receive premium customer attention. <br>
+          At Reliable Repairs, we believe that every nail, screw, and beam contributes to creating your ideal space. We’re a company that provides customers with an expert handyman servicing Kawartha Lakes. We understand that every home has unique needs. Our commitment to excellence shapes everything we do. We always seek to provide our customers with hassle-free services that improve and elevate any interior or exterior part of your property. We aim to be communicative and professional so that you will always receive premium customer attention. <br>
           Our job isn’t finished until you are happy. We take immense pride in delivering results that exceed expectations and building lasting relationships with our clients. Let Reliable Repairs be your trusted partner in maintaining and enhancing your most valued spaces! Call 289-500-5163 today and experience the professional handyman service we offer!
         </p>
       </div>
@@ -435,12 +435,7 @@
               CONTACT
             </h5>
             <div>
-              <div class="img-box">
-                <img src="location-white.png" width="18px" alt="">
-              </div>
-              <p>
-                REABORO, ON 
-              </p>
+           
               
             </div>
             <div>
