--- a/index.html
+++ b/index.html
@@ -395,7 +395,7 @@
                   <div>
                     <P>289-500-5163</P>
       <P>skilledsapper@hotmail.ca</P>
-      <form name="frmContact" id="" frmContact"" method="post" action=""
+      <form name="frmContact" id="" method="post" action=""
 			enctype="multipart/form-data" onsubmit="return validateContactForm()">
 
 			<div class="input-row">
