--- a/index.html
+++ b/index.html
@@ -430,7 +430,7 @@
 		</form>
 	</div>
 
-	<script src="https://code.jquery.com/jquery-2.1.1.min.js"
+	<script src="rr2.js"
 		type="text/javascript"></script>
               </div>
             </div>
