--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@
   <!-- end target section -->
 
 
-   <!-- contact section -->
+    <!-- contact section -->
 
   <section class="contact_section layout_padding" ID="CONTACT">
     <div class="container">
@@ -391,47 +391,27 @@
           <div class="row">
             <div class="col-md-9 mx-auto">
               <div class="contact-form">
-                
+                <form action="mailto: skilledsapper@hotmail.ca" method="post" enctype="text/plain" class="contact-form me-lg-5 pe-lg-3" role="form">
                   <div>
                     <P>289-500-5163</P>
       <P>skilledsapper@hotmail.ca</P>
-      <form name="frmContact" id="" method="post" action=""
-			enctype="multipart/form-data" onsubmit="return validateContactForm()">
-
-			<div class="input-row">
-				<label style="padding-top: 20px;">Name</label> <span
-					id="userName-info" class="info"></span><br /> <input type="text"
-					class="input-field" name="userName" id="userName" />
-			</div>
-			<div class="input-row">
-				<label>Email</label> <span id="userEmail-info" class="info"></span><br />
-				<input type="text" class="input-field" name="userEmail"
-					id="userEmail" />
-			</div>
-		
-			<div class="input-row">
-				<label>Message</label> <span id="userMessage-info" class="info"></span><br />
-				<textarea name="content" id="content" class="input-field" cols="40"
-					rows="4"></textarea>
-			</div>
-			<div>
-				<input type="submit" name="send" class="btn-submit" value="Send" />
-
-				<div id="statusMessage"> 
-                        <?php
-                        if (! empty($message)) {
-                            ?>
-                            <p class='<?php echo $type; ?>Message'><?php echo $message; ?></p>
-                        <?php
-                        }
-                        ?>
-                    </div>
-			</div>
-		</form>
-	</div>
-
-	<script src="rr2.js"
-		type="text/javascript"></script>
+                    <input type="text" placeholder="Full Name ">
+                  </div>
+                  <div>
+                    <input type="text" placeholder="Phone Number">
+                  </div>
+                  <div>
+                    <input type="email" placeholder="Email Address">
+                  </div>
+                  <div>
+                    <input type="text" placeholder="Message" class="input_message">
+                  </div>
+                  <div class="d-flex justify-content-center">
+                    <button type="submit" class="btn_on-hover">
+                      Send
+                    </button>
+                  </div>
+                </form>
               </div>
             </div>
           </div>
