--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@
   <!-- end target section -->
 
 
-    <!-- contact section -->
+     <!-- contact section -->
 
   <section class="contact_section layout_padding" ID="CONTACT">
     <div class="container">
@@ -391,7 +391,7 @@
           <div class="row">
             <div class="col-md-9 mx-auto">
               <div class="contact-form">
-                <form action="submit.php" method="POST">
+                <form action="mailto: skilledsapper@hotmail.ca" method="post" enctype="text/plain" class="contact-form me-lg-5 pe-lg-3" role="form">
                   <div>
                     <P>289-500-5163</P>
       <P>skilledsapper@hotmail.ca</P>
@@ -420,7 +420,6 @@
  
     </div>
   </section>
-
   <!-- end contact section -->
 
 
