--- a/index.html
+++ b/index.html
@@ -395,16 +395,16 @@
                   <div>
                     <P>289-500-5163</P>
       <P>skilledsapper@hotmail.ca</P>
-                    <input type="text" placeholder="Full Name ">
+      <input type="text" name="name" id="name" class="form-control" placeholder="Name" required>
                   </div>
                   <div>
-                    <input type="text" placeholder="Phone Number">
+                    <input type="phone number" name="phone number" id="phone number"class="form-control" placeholder="phone number" required>
                   </div>
                   <div>
-                    <input type="email" placeholder="Email Address">
+                    <input type="email" name="email" id="email" pattern="[^ @]*@[^ @]*" class="form-control" placeholder="Email address" required>
                   </div>
                   <div>
-                    <input type="text" placeholder="Message" class="input_message">
+                    <textarea id="message" name="message" class="form-control" placeholder="Message" required style="height: 160px"></textarea>
                   </div>
                   <div class="d-flex justify-content-center">
                     <button type="submit" class="btn_on-hover">
