--- a/index.html
+++ b/index.html
@@ -89,13 +89,13 @@
                   <div class="detail-box">
                     <div>
                       <h2>
-                        YOUR PARNTER FOR DEPENDABLE 
+                        YOUR PARTNER FOR DEPENDABLE 
                       </h2>
                       <h2>
                         HOME SOLUTIONS
                       </h2>
                       <p>
-                        LET US CHECK OF YOUR TO-DO LIST
+                        LET US CHECK OFF YOUR TO-DO LIST
                       </p>
                       <div class="">
                         <a href="#CONTACT">
@@ -518,3 +518,4 @@
 </body>
 
 </html>
+
