--- a/index.html
+++ b/index.html
@@ -358,6 +358,76 @@
                 <img src="IMG_2466.jpeg" alt="">
               </div>
               <div class="detail-box">
+
+                        </div>
+            </div>
+          </div>
+          <div class="item">
+            <div class="box">
+              <div class="img-box">
+                <img src="repairs1.JPG" alt="">
+              </div>
+              <div class="detail-box">
+
+                                </div>
+            </div>
+          </div>
+          <div class="item">
+            <div class="box">
+              <div class="img-box">
+                <img src="repairs2.JPG" alt="">
+              </div>
+              <div class="detail-box">
+
+                                </div>
+            </div>
+          </div>
+          <div class="item">
+            <div class="box">
+              <div class="img-box">
+                <img src="repairs3.JPG" alt="">
+              </div>
+              <div class="detail-box">
+
+                                </div>
+            </div>
+          </div>
+          <div class="item">
+            <div class="box">
+              <div class="img-box">
+                <img src="repairs4.JPG" alt="">
+              </div>
+              <div class="detail-box">
+
+                                </div>
+            </div>
+          </div>
+          <div class="item">
+            <div class="box">
+              <div class="img-box">
+                <img src="repairs5.JPG" alt="">
+              </div>
+              <div class="detail-box">
+
+                                </div>
+            </div>
+          </div>
+          <div class="item">
+            <div class="box">
+              <div class="img-box">
+                <img src="repairs6.JPG" alt="">
+              </div>
+              <div class="detail-box">
+
+                                </div>
+            </div>
+          </div>
+          <div class="item">
+            <div class="box">
+              <div class="img-box">
+                <img src="repairs7.JPG" alt="">
+              </div>
+              <div class="detail-box">
             
               </div>
             </div>
@@ -518,4 +588,5 @@
 </body>
 
 </html>
+
 
