--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                       </p>
                       <div class="">
                         <a href="#CONTACT">
-                          FREE QUOTE
+                          GET ESTIMATE
                         </a>
                       </div>
                     </div>
@@ -588,5 +588,6 @@
 </body>
 
 </html>
+
 
 
