--- a/index.html
+++ b/index.html
@@ -536,10 +536,10 @@
               <a href="https://www.facebook.com/share/153AcaiqHD/?mibextid=wwXIfr">
                 <img src="fb.png" alt="">
               </a>
-
+            </div>
                  <div class="social_box">
               <a href="https://www.instagram.com/reliablerepairscarpentry/">
-                <img src="insta.jpg" alt="">
+                <img src="insta.jpg" alt="" style="height:200px; width:200px;">
               </a>
             
             </div>
@@ -593,6 +593,7 @@
 </body>
 
 </html>
+
 
 
 
