--- a/index.html
+++ b/index.html
@@ -536,6 +536,11 @@
               <a href="https://www.facebook.com/share/153AcaiqHD/?mibextid=wwXIfr">
                 <img src="fb.png" alt="">
               </a>
+
+                   <div class="social_box">
+              <a href="https://www.instagram.com/reliablerepairscarpentry/">
+                <img src="insta.jpg" alt="" style="width:50px; height:70px">
+              </a>
   
             
             </div>
@@ -589,6 +594,7 @@
 </body>
 
 </html>
+
 
 
 
