--- a/index.html
+++ b/index.html
@@ -435,6 +435,12 @@
         </div>
       </div>
     </div>
+
+    <video controls>
+    <source src="repairsvideo.mp4" type="video/mp4">
+    <source src="repairsvideo.webm" type="video/webm">
+    <p>Your browser doesn't support HTML video. Here is a <a href="https://www.instagram.com/reel/DS-z619CaKF/?igsh=dTVwcWJjYnJlbWE0">link to the video</a> instead.</p>
+</video>
   </section>
 
   <!-- end client section -->
@@ -594,6 +600,7 @@
 </body>
 
 </html>
+
 
 
 
