--- a/index.html
+++ b/index.html
@@ -435,13 +435,15 @@
         </div>
       </div>
     </div>
+    </section>
+    </div>
 
     <video controls>
     <source src="repairsvideo.mp4" type="video/mp4">
     <source src="repairsvideo.webm" type="video/webm">
     <p>Your browser doesn't support HTML video. Here is a <a href="https://www.instagram.com/reel/DS-z619CaKF/?igsh=dTVwcWJjYnJlbWE0">link to the video</a> instead.</p>
 </video>
-  </section>
+  
 
   <!-- end client section -->
 
@@ -545,7 +547,7 @@
 
                    <div class="social_box">
               <a href="https://www.instagram.com/reliablerepairscarpentry/">
-                <img src="insta.jpg" alt="" style="width:115px; height:45px">
+                <img src="insta.jpg" alt="" style="width:115px; height:40px">
               </a>
   
             
@@ -600,6 +602,7 @@
 </body>
 
 </html>
+
 
 
 
