--- a/index.html
+++ b/index.html
@@ -437,7 +437,8 @@
     </div>
     </section>
     </div>
-<div class="container">
+ <section class="client_section" id="showcase">
+    <div class="container">
     <video controls>
     <source src="repairsvideo.mp4" type="video/mp4">
     <source src="repairsvideo.webm" type="video/webm">
@@ -602,6 +603,7 @@
 </body>
 
 </html>
+
 
 
 
