--- a/index.html
+++ b/index.html
@@ -439,7 +439,7 @@
     </div>
  <section class="client_section" id="showcase">
     <div class="container">
-    <video controls>
+    <video autoplay muted loop playsinline controls>
     <source src="repairsvideo.mp4" type="video/mp4">
     <source src="repairsvideo.webm" type="video/webm">
     <p>Your browser doesn't support HTML video. Here is a <a href="https://www.instagram.com/reel/DS-z619CaKF/?igsh=dTVwcWJjYnJlbWE0">link to the video</a> instead.</p>
@@ -601,6 +601,7 @@
 </body>
 
 </html>
+
 
 
 
