--- a/index.html
+++ b/index.html
@@ -292,6 +292,20 @@
       </div>
       <div class="carousel-wrap">
         <div class="owl-carousel">
+                 <div class="item">
+            <div class="box">
+              <div class="img-box">
+                <a href="https://www.instagram.com/reel/DS-z619CaKF/?igsh=dTVwcWJjYnJlbWE0">
+                  <img src="videoimg.jpg" alt="">
+                </a>
+              </div>
+              <div class="detail-box">
+
+
+
+              </div>
+            </div>
+          </div>
           <div class="item">
             <div class="box">
               <div class="img-box">
@@ -601,6 +615,7 @@
 </body>
 
 </html>
+
 
 
 
