--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <!-- Mobile Metas -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- Site Metas -->
-  <meta name="keywords" content="Handy man, Home repair, Drywall repair, Cabinet install, Home reno, Roofing, Shed build, Renovations, Yard maintence">
+  <meta name="keywords" content="Handy man, Home repair, Drywall repair, Cabinet install, Home reno, Roofing, Shed build, Renovations, Yard maintence, Fix it service">
   <meta name="description" content="" />
   <meta name="author" content="" />
 
@@ -608,6 +608,7 @@
 </body>
 
 </html>
+
 
 
 
