--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <meta name="description" content="Handy man, Home repair, Drywall repair, Cabinet install, Home reno, Roofing, Shed build, Renovations, Yard maintence, Fix it service">
   <meta name="author" content="" />
 
-  <title>Reliable Repairs</title>
+  <title>Reliable Repairs - Home Improvement</title>
 
   <!-- slider stylesheet -->
   <!-- slider stylesheet -->
@@ -608,6 +608,7 @@
 </body>
 
 </html>
+
 
 
 
