--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                       </p>
                       <div>
                         <a>
-                          289-500-5163 
+                          <a href="tel:+1-289-500-5163" class="call-button">289-500-5163</a>
                         </a>
                       </div>
                     </div>
@@ -555,7 +555,12 @@
 
                    <div class="social_box">
               <a href="https://www.instagram.com/reliablerepairscarpentry/">
-                <img src="insta.jpg" alt="" style="width:115px; height:40px">
+                <img src="insta.jpg" alt="">
+              </a>
+
+                          <div class="social_box">
+              <a href="https://www.instagram.com/reliablerepairscarpentry/">
+                <img src="google.jpg" alt="">
               </a>
 
 
@@ -608,6 +613,7 @@
 </body>
 
 </html>
+
 
 
 
