--- a/index.html
+++ b/index.html
@@ -538,6 +538,9 @@
                 skilledsapper@hotmail.ca
               </p>
             </div>
+             <p>
+                Service Areas: Lindsay, Bobcaygeon, Fenelon Falls, Peterborough & Surrounding Areas
+              </p>
           </div>
         </div>
 
@@ -575,7 +578,7 @@
   <!-- footer section -->
   <section class="container-fluid footer_section">
     <p>
-      Copyright © 2025 Realiable Repairs - All Rights Reserved.
+      Copyright © Realiable Repairs - All Rights Reserved.
     </p>
     <p>
       Website By Pazey Coding
@@ -613,6 +616,7 @@
 </body>
 
 </html>
+
 
 
 
