--- a/index.html
+++ b/index.html
@@ -551,17 +551,17 @@
 
             <div class="social_box">
               <a href="https://www.facebook.com/share/153AcaiqHD/?mibextid=wwXIfr">
-                <img src="fb.png" alt="">
+                <img src="fb.png" alt="" style="width: 250px; height: 100px;">
               </a>
 
                    <div class="social_box">
               <a href="https://www.instagram.com/reliablerepairscarpentry/">
-                <img src="insta.jpg" alt="">
+                <img src="insta.jpg" alt="" style="width: 250px; height: 100px;">
               </a>
 
                           <div class="social_box">
               <a href="https://www.instagram.com/reliablerepairscarpentry/">
-                <img src="google.jpg" alt="">
+                <img src="google.jpg" alt="" style="width: 250px; height: 100px;">
               </a>
 
 
@@ -621,6 +621,7 @@
 </body>
 
 </html>
+
 
 
 
