--- a/index.html
+++ b/index.html
@@ -467,7 +467,7 @@
 
       <div class="heading_container">
         <h2>
-          CONTACT RELIABLE REPAIRS
+          CONTACT <br> RELIABLE <br> REPAIRS
         </h2>
       </div>
       <div>
@@ -568,7 +568,7 @@
             </div>
                      
         </div>
-
+            </div>
 
         <div class="col-md-3">
           <h5>SERVICE AREAS</h5>
@@ -621,6 +621,7 @@
 </body>
 
 </html>
+
 
 
 
