--- a/index.html
+++ b/index.html
@@ -560,7 +560,7 @@
               </a>
 
                           <div class="social_box">
-              <a href="https://www.instagram.com/reliablerepairscarpentry/">
+              <a href="https://share.google/q18LoOmQtaC6QhtSw">
                 <img src="google.jpg" alt="" style="width: 250px; height: 100px;">
               </a>
 
@@ -621,6 +621,7 @@
 </body>
 
 </html>
+
 
 
 
