--- a/index.html
+++ b/index.html
@@ -551,17 +551,17 @@
 
             <div class="social_box">
               <a href="https://www.facebook.com/share/153AcaiqHD/?mibextid=wwXIfr">
-                <img src="fb.png" alt="" style="width: 200px; height: 100px;">
+                <img src="fb.png" alt="" style="width: 200px; height: 80px;">
               </a>
 
                    <div class="social_box">
               <a href="https://www.instagram.com/reliablerepairscarpentry/">
-                <img src="insta.jpg" alt="" style="width: 200px; height: 110px;">
+                <img src="insta.jpg" alt="" style="width: 200px; height: 80px;">
               </a>
 
                           <div class="social_box">
               <a href="https://share.google/q18LoOmQtaC6QhtSw">
-                <img src="google.jpg" alt="" style="width: 200px; height: 100px;">
+                <img src="google.jpg" alt="" style="width: 200px; height: 80px;">
               </a>
 
 
@@ -577,7 +577,8 @@
           <h5>SERVICE AREAS</h5>
 
 <p>Lindsay, Bobcaygeon, Fenelon Falls, Peterborough & Surrounding Areas</p>
-        </div>
+        </div
+          </div>
   </section>
 
   <!-- end info_section -->
@@ -624,6 +625,7 @@
 </body>
 
 </html>
+
 
 
 
