--- a/index.html
+++ b/index.html
@@ -535,6 +535,7 @@
               <p>
                 skilledsapper@hotmail.ca
               </p>
+              <p>Service Areas: Lindsay,Bobcaygeon,Fenelon Falls,Peterborough & More </p>
               
               
             </div>
@@ -619,6 +620,7 @@
 </body>
 
 </html>
+
 
 
 
