--- a/index.html
+++ b/index.html
@@ -535,6 +535,7 @@
               <p>
                 skilledsapper@hotmail.ca
               </p>
+            </div>
               <p>Service Areas: Lindsay,Bobcaygeon,Fenelon Falls,Peterborough & More </p>
               
               
@@ -620,6 +621,7 @@
 </body>
 
 </html>
+
 
 
 
