--- a/index.html
+++ b/index.html
@@ -544,7 +544,7 @@
           </div>
         </div>
       
-
+    </div>
 
         <div class="col-md-5">
           <div class="info_insta">
@@ -622,6 +622,7 @@
 </body>
 
 </html>
+
 
 
 
