--- a/index.html
+++ b/index.html
@@ -510,6 +510,7 @@
 
 
   <!-- info section -->
+     <section class="info_section ">
 
     <div class="container">
       <div class="row">
@@ -574,7 +575,7 @@
             </div>
           </div>
     
-
+        </section>
 
 
   <!-- end info_section -->
@@ -621,6 +622,7 @@
 </body>
 
 </html>
+
 
 
 
